Fix up carousel on gain. Also v2 div shaping on mobile.

--- a/docs/_sass/v2-viz.scss
+++ b/docs/_sass/v2-viz.scss
@@ -1,13 +1,14 @@
 #v2-div {
   position: absolute;
-  top: 9rem;
+  top: 4.5rem;
   left: 1rem;
-  height: calc(100vh - 3rem - 8rem - 3rem);
-  min-height: calc(100vh - 3rem - 8rem - 3rem);
-  max-height: calc(100vh - 3rem - 8rem - 3rem);
+  height: calc(100vh - 3rem - 8.5rem );
+  min-height: calc(100vh - 4rem - 8.5rem );
+  max-height: calc(100vh - 4rem - 8.5rem );
   width: calc(100vw - 2rem);
   display: none;
   z-index: 1020;
+  overflow-y: auto;
 
   background-color: rgba(255, 255, 255, 0.93);
 
@@ -59,11 +60,14 @@
   .main-gain {
     margin: 0;
     color: $purple;
-    line-height: 2rem;
-    font-size: 2.8rem;
+    line-height: 1.6rem;
+    font-size: 1.75rem;
+    min-height: 4.75rem;
+    max-height: 4.75rem;
+    overflow-y: hidden;
 
     small {
-      font-size: 1.5rem;
+      font-size: 1.25rem;
     }
   }
 
@@ -85,6 +89,19 @@
 
     .legend-ul li {
       font-size: 1.0rem;
+    }
+
+    .main-gain {
+      margin: 0;
+      color: $purple;
+      line-height: 2rem;
+      font-size: 2.8rem;
+      min-height: 4.5rem;
+      max-height: 4.5rem;
+
+      small {
+        font-size: 1.5rem;
+      }
     }
   }
 }
